z-index fix

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -38,6 +38,8 @@ nav{
     top: 0;
     
     height: 8vh;
+
+    z-index: 2;
     
     
 }
